# lrc20

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md
apps/cli/: Cargo.toml  README.md
apps/cli/src/: context.rs
apps/cli/src/actions/: announcement_args.rs  mod.rs  p2tr.rs  proof.rs  pubkey.rs
apps/cli/src/actions/balances/: mod.rs
apps/cli/src/actions/bulletproof/: check.rs  dh.rs  issue.rs  transfer.rs
apps/cli/src/actions/burn/: mod.rs
apps/cli/src/actions/convert/: p2tr_to_pubkey.rs
apps/cli/src/actions/decode/: mod.rs
apps/cli/src/actions/freeze/: mod.rs
apps/cli/src/actions/generate/: address.rs  config.rs  hash.rs  keypair.rs  mod.rs  utils.rs
apps/cli/src/actions/get/: mod.rs
apps/cli/src/actions/issue/: mod.rs
apps/cli/src/actions/provide/: mod.rs
apps/cli/src/actions/token_pubkey/: announcement.rs  info.rs  logo.rs  mod.rs  transfer_ownership.rs
apps/cli/src/actions/transfer/: mod.rs
apps/cli/src/actions/types/: mod.rs
apps/cli/src/actions/utxos/: mod.rs
apps/cli/src/actions/wallet/: abort.rs  mod.rs
apps/cli/src/config/: lrc20node.rs  mod.rs
apps/e2e-test/: Cargo.toml  README.md
apps/e2e-test/src/cli/: account.rs  actions.rs  e2e.rs  faucet.rs  tx_checker.rs
apps/e2e-test/src/config/: mod.rs  nodes.rs
apps/node/: Cargo.toml  README.md
apps/node/src/cli/: actions.rs  logging.rs  mod.rs  node.rs
apps/node/src/config/: controller.rs  graph_builder.rs  indexer.rs  logger.rs  mod.rs  p2p.rs  rpc.rs  storage.rs
benches/: Cargo.toml
benches/benches/: controller_benchmark.rs  tx_attach_benchmark.rs  tx_check_benchmark.rs  tx_generator.rs
crates/bindings-kit/: Cargo.toml  pyproject.toml
crates/bindings-kit/src/: key.rs  lib.rs  txbuilder.rs  txsigner.rs  util.rs
crates/bitcoin-client/: Cargo.toml
crates/bitcoin-client/src/: client.rs  json.rs  rpc_api.rs
crates/controller/: Cargo.toml  README.md
crates/controller/src/: handler.rs
crates/dev-kit/: Cargo.toml  README.md
crates/dev-kit/examples/: 000_wallet_sync.rs  010_issuance.rs  020_transfer.rs  021_multi_token_pubkey_transfer.rs  022_multisig.rs  023_lightning.rs  030_sweep_tx.rs
crates/dev-kit/examples/common/: mod.rs
crates/dev-kit/src/: bitcoin_provider.rs  lib.rs  lrc20_coin_selection.rs  txsigner.rs  types.rs  wallet.rs
crates/dev-kit/src/database/: inmemory.rs  mod.rs  sqlite.rs  wrapper.rs
crates/dev-kit/src/database/sqlite/: migrator.rs
crates/dev-kit/src/sync/: indexer.rs
crates/dev-kit/src/txbuilder/: bulletproof.rs  mod.rs
crates/dev-kit/src/wallet/: inmemory.rs  storage.rs
crates/p2p/: Cargo.toml
crates/p2p/src/client/: boot_nodes.rs  controller.rs  error.rs  handle.rs  mod.rs  peer.rs  service.rs  stream.rs
crates/p2p/src/common/: network.rs  peer.rs  time.rs
crates/p2p/src/fsm/: addrmgr.rs  event.rs  handler.rs  output.rs  peermgr.rs
crates/p2p/src/net/: reactor.rs
crates/protos/: Cargo.toml  build.rs
crates/protos/src/: lib.rs  util.rs
crates/protos/src/proto/: rpc.v1.rs
crates/receipts/: Cargo.toml  README.md
crates/receipts/src/: consensus.rs  errors.rs  hash.rs  keys.rs  lib.rs  metadata.rs  proof.rs  receipt.rs  tweakable.rs
crates/receipts/src/proof/bulletproof/: consensus.rs  mod.rs  (+2 more)
crates/receipts/src/receipt/: deser.rs
crates/rpc-api/: Cargo.toml  README.md
crates/rpc-api/src/: transactions.rs
crates/rpc-api/src/transactions/: rpc.rs
crates/rpc-server/: Cargo.toml  README.md  build.rs
crates/rpc-server/src/: lib.rs  transactions.rs
crates/rpc-server/src/middleware/: grpc.rs  jsonrpc.rs  mod.rs
crates/rpc-server/src/spark/: mod.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: lib.rs
crates/storage/src/converters/: lrc20.rs  mod.rs  spark.rs
crates/storage/src/entities/: announcement.rs  bulletproof.rs  indexer_state.rs  inner_key.rs  issue_announcement.rs  l1_transaction.rs  lightning_commitment_proof.rs  lightning_htlc_proof.rs  mempool_transaction.rs  mod.rs  multisig_proof.rs  operator_pubkey.rs  operator_signature.rs  p2wsh_proof.rs  prelude.rs  proof.rs  pubkey_freeze_announcement.rs  sea_orm_active_enums.rs  spark_burn.rs  spark_exit_proof.rs  spark_freeze_data.rs  spark_issue_data.rs  spark_output.rs  spark_transaction.rs  token.rs  token_logo_announcement.rs  token_pubkey_announcement.rs  transfer_ownership_announcement.rs  tx_freeze_announcement.rs  user_signature.rs
crates/storage/src/impls/: postgres.rs
crates/storage/src/migration/: Cargo.toml
crates/storage/src/traits/: indexer.rs  inventory.rs  lrc20.rs  mempool.rs  mod.rs  spark.rs  util.rs
crates/tx-attach/: Cargo.toml  README.md
crates/tx-attach/src/: lib.rs  spark.rs
crates/tx-check/: Cargo.toml  README.md
crates/tx-check/src/: errors.rs  isolated_checks.rs  lib.rs  script_parser.rs  service.rs
crates/tx-check/src/tests/: mod.rs  script_parser.rs
crates/tx-confirm/: Cargo.toml  README.md
crates/tx-confirm/src/: lib.rs
crates/tx-confirm/src/tests/: mod.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: consensus.rs  lib.rs  network.rs  proofs.rs
crates/types/src/announcements/: announcement.rs  issue.rs  mod.rs  token_logo.rs  token_pubkey.rs  transfer_ownership.rs
crates/types/src/assets/: issue.json  transfer.json
crates/types/src/messages/: mod.rs  p2p.rs
crates/types/src/spark/: consensus.rs  mod.rs  signature.rs  spark_hash.rs
crates/types/src/transactions/: consensus.rs  mod.rs
fuzz/: Cargo.toml  README.md
fuzz/src/: main.rs
python-sdk/: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml
python-sdk/.devcontainer/: devcontainer.json
python-sdk/lrc20-py/: build_protos.py  pyproject.toml  samples.py
python-sdk/lrc20-py/lrc20/: __init__.py  coin_select.py  lrc20_client.py  lrc20_grpc_client.py  lrc20_types.py  utils.py  wallet.py
python-sdk/lrc20-py/lrc20/db/: db.py  dbm.py  in_memory.py
python-sdk/lrc20-py/lrc20/electrs/: electrs.py
python-sdk/lrc20-py/lrc20/protos/: __init__.py
tests/: Cargo.toml
tests/tests/: cli_flow.rs  common.rs  multisig_check.rs  provide_list_lrc20_proofs.rs  sweep.rs  taproot_check.rs
(+182 files in other folders)
