[workspace.package]
edition = "2024"
version = "0.7.10"
license = "Apache-2.0"
repository = "https://github.com/lightsparkdev/lrc20"

[workspace]
members = [
    "apps/cli",
    "apps/node",
    "apps/e2e-test",
    "apps/ogaki",
    "crates/receipts",
    "crates/types",
    "crates/tx-check",
    "crates/bitcoin-client",
    "crates/jsonrpc",
    "crates/storage",
    "crates/controller",
    "crates/tx-attach",
    "crates/tx-confirm",
    "crates/event-bus",
    "crates/event-bus-macros",
    "crates/rpc-api",
    "crates/rpc-server",
    "crates/indexers",
    "crates/dev-kit",
    "crates/protos",
    "crates/bindings-kit",
    "crates/bulletproof",
    "crates/p2p",
    "crates/bdk",
    "benches",
    "tests",
]
exclude = ["fuzz"]

[workspace.dependencies]
thiserror = { version = "1.0", default-features = false }
serde = { version = "1.0.104", default-features = false }
tokio = { version = "1.0", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }
tonic = { version = "0.13.0" }
tonic-build = { version = "0.13.0" }
prost = { version = "0.13.4", default-features = false }
prost-types = { version = "0.13.5", default-features = false }
futures = { version = "0.3.5", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
jsonrpsee = { version = "0.20", default-features = false }
hyper = { version = "0.14.20", default-features = false }
tower-http = { version = "0.4.0", default-features = false }
tower = { version = "0.4.13", default-features = false }
async-trait = { version = "0.1.73", default-features = false }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
serde_json = { version = "1.0.107", default-features = false }
bitcoin = { version = "0.31.2", default-features = false }
reqwest = { version = "0.11", default-features = false }
sea-orm = { version = "1.1.7", default-features = false }
flume = { version = "0.11.0" }
eyre = { version = "0.6.8" }
hex = { version = "0.4.3" }
mockall = { version = "0.12.0" }
ciborium = { version = "0.2.2" }
color-eyre = { version = "0.6.2" }
once_cell = { version = "1.18.0" }
rust_decimal = { version = "1.30.0" }
chrono = { version = "0.4.30" }
sea-orm-migration = { version = "^1.1.7" }
prometheus = { version = "0.14.0", default-features = false }
lazy_static = { version = "1.5.0" }

[workspace.dependencies.config]
version = "0.13.3"
default-features = false
# maybe in future we'll add more formats
features = ["toml"]

[profile.dev.package.sqlx-macros]
opt-level = 3
