[package]
name = "fuzz"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lrc20-receipts = { path = "../crates/receipts" }
afl = { version = "0.15.3" }
once_cell = "1.18.0"

bitcoin = { workspace = true, features = ["rand"] }
