[package]
name = "tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
lrcdk = { path = "../crates/dev-kit" }
lrc20-types = { path = "../crates/types" }
tokio = { workspace = true, features = ["sync", "macros", "test-util"] }
lrc20-rpc-api = { path = "../crates/rpc-api", features = ["client"], default-features = false }
bitcoin-client = { path = "../crates/bitcoin-client" }
bdk = { path = "../crates/bdk", features = ["sqlite", "rpc", "use-esplora-blocking"] }
once_cell = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
bitcoin = { workspace = true, features = ["serde", "base64", "rand"] }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
