[package]
name = "e2e-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bdk = { path = "../../crates/bdk" }
lrc20-storage = { path = "../../crates/storage" }
lrc20-types = { path = "../../crates/types", features = ["consensus"] }
lrc20-receipts = { path = "../../crates/receipts" }
lrc20-rpc-api = { path = "../../crates/rpc-api", features = [
    "client",
], default-features = false }
lrcdk = { path = "../../crates/dev-kit" }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
bitcoin = { workspace = true, features = ["serde"] }
eyre = { workspace = true }
jsonrpsee = { workspace = true }
config = { workspace = true }
serde = { workspace = true, features = ["rc"] }
once_cell = { workspace = true }

clap = { version = "4.1.6", features = ["derive", "cargo"] }
serde_json = { version = "1.0" }
futures = { version = "0.3.30" }
rand = { version = "0.8.5" }
tracing-appender = { version = "*" }
csv = "1.3.0"
chrono = { version = "0.4.37" }
