[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lrcdk"
version = "0.5.1"
description = "Rust LRC20 bindings to Python interpreter."

requires-python = ">=3.11"
dynamic = ["version"]

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
