[package]
name = "lrc20-controller"
description = "LRC20 Node's message handler from the network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lrc20-storage = { path = "../storage" }
lrc20-types = { path = "../types", features = ["messages", "consensus"] }
event-bus = { path = "../event-bus" }
lrc20-p2p = { path = "../p2p" }
lrc20-tx-check = { path = "../tx-check" }

bitcoin = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-util = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
