[package]
name = "protos"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[features]
util = []

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
eyre = { workspace = true }
bitcoin = { workspace = true }
lrc20-types = { path = "../types" }
lrc20-tx-check = { path = "../tx-check" }
lrc20-receipts = { path = "../receipts" }
lrc20-storage = { path = "../storage" }

[build-dependencies]
tonic-build = { workspace = true }
