[package]
name = "lrc20-rpc-api"
description = "LRC20 Node's JSON RPC Server declaration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
client = ["jsonrpsee", "jsonrpsee/http-client", "jsonrpsee/async-client", "jsonrpsee/macros"]
server = ["jsonrpsee", "jsonrpsee/server", "jsonrpsee/macros"]
default = [ "full" ]
full = [ "client", "server" ]

[dependencies]
lrc20-types = { path = "../types", features = ["consensus"] }
lrc20-receipts = { path = "../receipts" }
lrc20-storage = { path = "../storage" }

jsonrpsee = { workspace = true, optional = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
