[package]
name = "lrc20-rpc-server"
description = "LRC20 Node's JSON RPC Server implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
event-bus = { path = "../event-bus" }
lrc20-types = { path = "../types", features = ["consensus"] }
lrc20-receipts = { path = "../receipts" }
protos = { path = "../protos", features = ["util"] }
lrc20-storage = { path = "../storage" }
lrc20-rpc-api = { path = "../rpc-api", features = [
    "server",
], default-features = false }
lrc20-tx-check = { path = "../tx-check" }
bitcoin-client = { path = "../bitcoin-client" }


serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
tracing = { workspace = true }
jsonrpsee = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
eyre = { workspace = true }
tonic = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
hex = { workspace = true }
sea-orm = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
hyper = { workspace = true }
tonic-reflection = "0.13.0"
axum = "0.8.3"
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }
lazy_static = { workspace = true }
futures-util = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
