[package]
name = "lrc20-tx-check"
description = "LRC20 Protocol's transactions checker module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
bulletproof = [
    "dep:k256",
    "lrc20-receipts/bulletproof",
    "lrc20-types/bulletproof",
]
no-std = ["bitcoin/no-std", "lrc20-receipts/no-std"]

[dependencies]
event-bus = { path = "../event-bus" }
lrc20-types = { path = "../types", features = ["messages"] }
lrc20-receipts = { path = "../receipts" }
lrc20-storage = { path = "../storage" }
bitcoin-client = { path = "../bitcoin-client" }

thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
eyre = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }

k256 = { version = "0.13.2", optional = true }

[dev-dependencies]
once_cell = "1.18.0"
lazy_static = "1.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
