[package]
name = "lrc20-tx-confirm"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lrc20-types = { path = "../types", features = ["messages"] }
event-bus = { path = "../event-bus" }
bitcoin-client = { path = "../bitcoin-client", features = ["mocks"] }

eyre = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "rt",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-util = { workspace = true }
bitcoin = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.4"
jsonrpc = { path = "../jsonrpc" }
