[package]
name = "lrc20-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["serde", "std"]
std = ["bitcoin/std", "lrc20-receipts/std"]
no-std = ["bitcoin/no-std", "lrc20-receipts/no-std"]
serde = ["dep:serde", "dep:typetag", "bitcoin/serde", "lrc20-receipts/serde"]
messages = ["dep:event-bus", "dep:bitcoin-client"]
consensus = []
bulletproof = ["lrc20-receipts/bulletproof"]

[dependencies]
lrc20-receipts = { path = "../receipts", features = ["consensus"] }
event-bus = { path = "../event-bus", optional = true }
bitcoin-client = { path = "../bitcoin-client", optional = true }

bitcoin = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
typetag = { version = "0.2.16", optional = true }
eyre = { workspace = true }
core2 = { version = "0.4.0" }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
once_cell = "1.18.0"
serde_json = { workspace = true, features = ["alloc"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }